modules/portal/portal-impl/src/test/resources/myapplication/error/notAnErrorHandler.js
exports.notAnErrorHandler = function (err) {

    return {
        body: 'Something'
    }

};
